Test to retrieve pfx from key vault.
